2004-09-01  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* interface/xaw_i.c: avoid all-black file selector when tracer is
	  not enabled, thanks to hmh@debian.org

2004-08-28  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* playmidi.c (new_chorus_voice, new_chorus_voice_alternate):
	  v1 and v2 are now swapped correctly
	* playmidi.c (process_sysex_event):
	  many fixes to XG SYSEX parsing
	* readmidi.c: (parse_sysex_event_multi):
	  many fixes to XG SYSEX parsing
	* reverb.c (do_filter_lowpass1_stereo):
	  p->x1l and p->x1r are now properly updated

2004-08-22  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mix.c (next_stage):
	  Added bounds checking after scaling envelope rates when
	  opt_tva_attack and/or opt_tva_decay are enabled.  This fixes
	  previous short/silent note problems when these options were
	  enabled.

2004-07-10  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c, interface/rtsyn_common.c,
	  timidity/playmidi.c:
	  Suppress force keysig transposition at the beginning of
	  MIDI sequence

2004-07-01  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c, interface/rtsyn_common.c,
	  timidity/playmidi.c:
	  Adjust force keysig transposition so that performance may
	  feel it natural

2004-06-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c, interface/rtsyn_common.c,
	  timidity/playmidi.[ch], timidity/readmidi.c,
	  timidity/timidity.[ch]:
	  Reflect the result of -K and -T command option on interfaces
	  Improve force keysig calculation
	  Change the base number of measure (bar) counter as 1 (was 0)

2004-06-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/loadtab.c, timidity/tables.[ch]:
	  Fix bug in -Z command option

2004-06-09 Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* timidity/reverb.c, timidity/tables.c,
	  doc/C/README.w32, doc/ja_JP.eucJP/README.w32:
	  small fixes for CbuilderX.

2004-06-02  Kentaro Sato <kentaro@ranvis.com>

	* utils/support.[ch]: Implemented subset of stat() for Mac OS.
