@@ -5465,7 +5465,7 @@ static inline void canonicalize_path(char* path)
 #endif
 }
 
-#if !defined ANOTHER_MAIN
+#if !defined(ANOTHER_MAIN) || defined(__W32__)
 #ifdef __W32__ /* Windows */
 #if ( (!defined(IA_W32GUI) || defined(__CYGWIN32__) || defined(__MINGW32__)) && !defined(IA_W32G_SYN) )
 /* Cygwin or Console */
